css changes to app.css and header.css to ensure header is visible on mobile landscape views

--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -11,7 +11,7 @@
     display: flex;
     flex: auto;
     flex-flow: column;
-    height: 90%;
+    height: calc(100% - 5rem); /* second number must be equal to the height of the header */
 }
 
 main {
