--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,6 @@
 
 .header {
-    height: 10%;
+    height: 5rem;
     width: 100%;
     background: #fff;
     text-align: center;
